# pipe_iter

./: LICENSE  README.md  pyproject.toml  setup.py  testing.ipynb
pipe_iter/: __init__.py  fork.py  func.py  pipe_iter.py
tests/: test_behavior.py  test_combinatoric.py  test_construction.py  test_consuming_operations.py  test_func.py  test_lazy_methods.py  test_settings.py
